Experiment to follow 1_6 and 2_8

--- a/script/ts_featurisation_script.ipynb
+++ b/script/ts_featurisation_script.ipynb
@@ -3,43 +3,61 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b63094d1",
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "%config Completer.use_jedi = False"
-   ]
+    "import datatable as dt"
+   ],
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "<style type='text/css'>\n",
+       ".datatable table.frame { margin-bottom: 0; }\n",
+       ".datatable table.frame thead { border-bottom: none; }\n",
+       ".datatable table.frame tr.coltypes td {  color: #FFFFFF;  line-height: 6px;  padding: 0 0.5em;}\n",
+       ".datatable .bool    { background: #DDDD99; }\n",
+       ".datatable .object  { background: #565656; }\n",
+       ".datatable .int     { background: #5D9E5D; }\n",
+       ".datatable .float   { background: #4040CC; }\n",
+       ".datatable .str     { background: #CC4040; }\n",
+       ".datatable .time    { background: #40CC40; }\n",
+       ".datatable .row_index {  background: var(--jp-border-color3);  border-right: 1px solid var(--jp-border-color0);  color: var(--jp-ui-font-color3);  font-size: 9px;}\n",
+       ".datatable .frame tbody td { text-align: left; }\n",
+       ".datatable .frame tr.coltypes .row_index {  background: var(--jp-border-color0);}\n",
+       ".datatable th:nth-child(2) { padding-left: 12px; }\n",
+       ".datatable .hellipsis {  color: var(--jp-cell-editor-border-color);}\n",
+       ".datatable .vellipsis {  background: var(--jp-layout-color0);  color: var(--jp-cell-editor-border-color);}\n",
+       ".datatable .na {  color: var(--jp-cell-editor-border-color);  font-size: 80%;}\n",
+       ".datatable .sp {  opacity: 0.25;}\n",
+       ".datatable .footer { font-size: 9px; }\n",
+       ".datatable .frame_dimensions {  background: var(--jp-border-color3);  border-top: 1px solid var(--jp-border-color0);  color: var(--jp-ui-font-color3);  display: inline-block;  opacity: 0.6;  padding: 1px 10px 1px 5px;}\n",
+       "</style>\n"
+      ]
+     },
+     "metadata": {}
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "18bce266",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 5,
    "source": [
     "from tsfresh import extract_features\n",
-    "from tsfresh import select_features\n",
-    "from tsfresh.feature_extraction import ComprehensiveFCParameters\n",
-    "com_setting=ComprehensiveFCParameters()"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "bcdde8d5",
-   "metadata": {},
-   "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "le = LabelEncoder()"
-   ]
+    "from tsfresh.feature_extraction import ComprehensiveFCParameters, MinimalFCParameters\n",
+    "com_setting=MinimalFCParameters()"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3fd5ae73",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
    "source": [
     "def feature_extractor(file):\n",
     "    df = pd.read_csv(file)\n",
@@ -47,105 +65,93 @@
     "    extracted_features = extract_features(X, column_id='id', column_sort='relyear', column_kind='test', column_value='value',\n",
     "                                          default_fc_parameters=com_setting, n_jobs=8)\n",
     "    return extracted_features"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "807e995a",
-   "metadata": {},
-   "source": [
-    "extracted_features, y = feature_extractor(file='meta_melted_2_2.gz',target='cat7')"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "88411746",
-   "metadata": {},
+   "execution_count": 7,
+   "source": [
+    "extracted_features = feature_extractor(file='/home/jupyter-dchristiadi85/PhD Project 1/data/meta_melted_1_2.gz')"
+   ],
    "outputs": [
     {
-     "name": "stderr",
      "output_type": "stream",
+     "name": "stderr",
      "text": [
-      "\r",
-      "Feature Extraction:   0%|                                                                       | 0/30 [00:00<?, ?it/s]"
+      "Feature Extraction: 100%|██████████| 40/40 [07:41<00:00, 11.54s/it]\n"
      ]
     }
    ],
-   "source": [
-    "extracted_features = feature_extractor(file='meta_melted_1_2.gz')"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "98ed31c6",
-   "metadata": {},
-   "source": [
-    "impute_dataframe_zero(extracted_features)\n",
-    "meta_melted_2_6 = select_features(X=extracted_features, y=y, fdr_level=0.05)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "cf80dbb8",
-   "metadata": {},
-   "source": [
-    "meta_melted_2_6.to_csv('selected_meta_melted_2_6.gz', compression='gzip', index=True)"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b9da7f23",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
    "source": [
-    "extracted_features.to_csv('pure_feat_meta_melted_1_2.gz', compression='gzip', index=True)"
-   ]
+    "extracted_features.to_csv('/home/jupyter-dchristiadi85/PhD Project 1/data/min_feat_meta_melted_1_2.gz', compression='gzip', index=True)"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e57890b1",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 10,
    "source": [
-    "extracted_features = feature_extractor(file='meta_melted_2_2.gz')"
-   ]
+    "extracted_features = feature_extractor(file='/home/jupyter-dchristiadi85/PhD Project 1/data/meta_melted_2_2.gz')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "Feature Extraction: 100%|██████████| 40/40 [03:44<00:00,  5.61s/it]\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "61752662",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 12,
    "source": [
-    "extracted_features.to_csv('pure_feat_meta_melted_2_2.gz', compression='gzip', index=True)"
-   ]
+    "extracted_features.to_csv('/home/jupyter-dchristiadi85/PhD Project 1/data/min_feat_meta_melted_2_2.gz', compression='gzip', index=True)"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
    "source": [
-    "extracted_features = feature_extractor(file='meta_melted_3_2.gz')"
-   ]
+    "extracted_features = feature_extractor(file='/home/jupyter-dchristiadi85/PhD Project 1/data/meta_melted_3_2.gz')"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "Feature Extraction: 100%|██████████| 40/40 [04:00<00:00,  6.02s/it]\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
    "source": [
-    "extracted_features.to_csv('pure_feat_meta_melted_3_2.gz', compression='gzip', index=True)"
-   ]
+    "extracted_features.to_csv('/home/jupyter-dchristiadi85/PhD Project 1/data/min_feat_meta_melted_3_2.gz', compression='gzip', index=True)"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.10 64-bit ('pythonProject': conda)"
+   "display_name": "Python 3.9.5 64-bit ('ml_dl': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -157,10 +163,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.5"
   },
   "interpreter": {
-   "hash": "d09c7342e55ead08a375a712ba0f79f39c14370a32d762caa72a78ddfe528bbd"
+   "hash": "252eb11dec6c7c75d43c93f623bff35f4a463f74afda1ad8986a53442394c969"
   }
  },
  "nbformat": 4,
